# generalized_information_filter

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/filter_test/: block.h  block_impl.h  constant_residual.h  constant_velocity_residual.h  defines.h  estimator.h  filter.h  filter_test.h  helper_functions.h  measurement.h  measurement_manager.h  position_residual.h  problem_builder.h  residual.h  residual_manager.h  state.h  timeline.h
include/filter_test/residuals/: constant_residual.h  constant_velocity_residual.h  position_residual.h
include/filter_test/utils/: geometry.h  logging.h  random.h
src/node/: example_node.cpp  filter_test_node.cpp
src/test/: test_filter.cpp  test_geometry.cpp  test_state.cpp  test_timeline.cpp
